--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,6 @@
 
 .top-container {
 	position: relative;
-	text-align: center;
 	width: 100%;
 	height: 100%;
 	margin:0;	
@@ -49,7 +48,7 @@ body {
 }
 
 .background-wrap {
-	background: #A6EAFF;
+	background: #BCEFFF;
     bottom: 0;
 	left: 0;
 	padding-top: 50px;
@@ -193,3 +192,96 @@ body {
 	right: 50px;
 	top: -90px;
 }
+
+/* middle container */
+
+.middle-container {
+	position: relative;
+	width: 100%;
+	display: flex;
+	padding-bottom: 40%;
+	min-height: 20vh;
+	background-color: #2D2D2D;
+}
+
+.california {
+    max-width: 550px;
+    height: auto;
+	padding-left: 3%;
+	padding-right: 20px;
+	width: 50%;
+	padding-top: 8%;
+	position: absolute;
+}
+
+.divider {
+	border-left: 2px solid white;
+	height: 450px;
+	position: absolute;
+	left: 50%;
+	top: 25%;
+	width: 50%;
+	height: 50%;
+}
+
+.about-title {
+	color: #E5E5E5;
+	position: absolute;
+	top: 28%;
+	left: 62%;
+	transform: translate(-50%, -50%);
+	font-size: 3vw;
+	font-family: 'Poiret One', cursive;
+}
+
+.about-description {
+	color: #E5E5E5;
+	position: absolute;
+	top: 40%;
+	left: 72%;
+	transform: translate(-50%, -50%);
+	font-size: 1.5vw;
+	font-family: 'Poiret One', cursive;
+}
+
+/* contact container */
+.contact-container {
+	background-color: #FCFCFC;
+	position: relative;
+	width: 100%;
+	display: flex;
+	padding-bottom: 50%;
+	min-height: 30vh;
+
+}
+
+.section-divider {
+	position: relative;
+  }
+  .section-divider:before {
+		font-family: 'codepen';
+		content: "C"; 
+		width: 6.5rem;
+		height: 6.5rem;
+		background: #FCFCFC;
+		border-radius: 100%;
+		position: absolute;
+		top: -3.25rem;
+		left: calc(50% - 3.25rem);
+		color: #2D2D2D;
+		line-height: 6rem;
+		text-indent: 1.75rem;
+		font-size: 4rem;
+	  }
+  
+
+.divider-2 {
+	border-left: 2px solid #2D2D2D;
+	height: 400px;
+	position: absolute;
+	left: 50%;
+	top: 15%;
+	width: 50%;
+	height: 50%;
+}
+
