--- a/css/index.css
+++ b/css/index.css
@@ -383,9 +383,20 @@ body {
 	display: inline-block;
 }
 
-.resume {
-	padding:10px;
+.resume a {
+	position: absolute;
+	margin-left: 44.2%;
+	margin-top:14.5%;
+	font-size: 1.8vw;
+	font-family: 'Caveat Brush', Arial, Helvetica, sans-serif;
+	color: #3C73A3;
+	text-decoration: none;
+	text-shadow: none;
 }
+
+.resume a:hover{
+	color: pink;
+} 
 
 .linkedin {
 	bottom: -.5%;
